[package]
authors = ["Pavel Aslanov <asl.pavel@gmail.com>"]
description = "Posix terminal rendering library"
edition = "2021"
homepage = "https://github.com/aslpavel/surf-n-term"
include = ["**/*.rs", "**/Cargo.toml", "**/README.md"]
license = "MIT"
name = "surf_n_term"
readme = "README.md"
repository = "https://github.com/aslpavel/surf-n-term.git"
version = "0.17.9"

[dependencies]
fnv = "^1.0"
lru = { version = "^0.13", default-features = false }
png = "^0.17"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
signal-hook = "^0.3"
smallvec = "^1.11"
tracing = "^0.1"
unicode-width = "^0.2"
either = "^1.13"

rasterize = "^0.5.1"
# rasterize = { path = "../rasterize", default-features = false, features = ["serde"]}

[dependencies.rustix]
# switch to published version once select is there
git = "https://github.com/bytecodealliance/rustix.git"
rev = "c2ac858c42c4a5609901b804d0032e3387264222"
features = ["event", "fs", "termios"]

[dev-dependencies]
criterion = { version = "^0.5", features = ["html_reports"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-appender = "^0.2"

[[bench]]
harness = false
name = "decoder"

[[bench]]
harness = false
name = "quantize"
