[package]
authors = ["Pavel Aslanov <asl.pavel@gmail.com>"]
description = "Posix terminal rendering library"
edition = "2024"
homepage = "https://github.com/aslpavel/surf-n-term"
include = ["**/*.rs", "**/Cargo.toml", "**/README.md"]
license = "MIT"
name = "surf_n_term"
readme = "README.md"
repository = "https://github.com/aslpavel/surf-n-term.git"
version = "0.18.1"

[dependencies]
fnv = "^1.0"
lru = { version = "^0.14", default-features = false }
png = "^0.17"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
signal-hook = "^0.3"
smallvec = "^1.11"
tracing = "^0.1"
unicode-width = "^0.2"
either = "^1.13"
rustix = { version = "^1.0", features = ["event", "fs", "termios"] }

rasterize = "^0.6"
# rasterize = { path = "../rasterize", default-features = false, features = ["serde"]}

[dev-dependencies]
criterion = { version = "^0.6", features = ["html_reports"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-appender = "^0.2"

[[bench]]
harness = false
name = "decoder"

[[bench]]
harness = false
name = "quantize"
